--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autoflow-ts",
+  "name": "autoapp-ts",
   "version": "0.1.0",
   "author": "Kyle Walters",
   "description": "used vehicle work-in-process inventory management system",
